# lab5_sem3_thread_quick_sort

./: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  myalg.hpp  sort.cpp  sort.hpp
test/: CMakeLists.txt  test_main.cpp
